Archive2/f5/60e1cb2322f77c/output
main.cpp: In member function 'void B<T>::bar()':
main.cpp:15:9: error: 'foo' was not declared in this scope
         foo<T>(); // jak należy wywołać te metode?
         ^
main.cpp:15:14: error: expected primary-expression before '>' token
         foo<T>(); // jak należy wywołać te metode?
              ^
main.cpp:15:16: error: expected primary-expression before ')' token
         foo<T>(); // jak należy wywołać te metode?
                ^
